# streaming

./: .gitignore  README.md  docker-compose.yml
jvm/: README.md
jvm/flink-processing/: pom.xml
jvm/flink-processing/src/main/java/com/romanidze/processing/: FlinkDataPipeline.java
jvm/flink-processing/src/main/java/com/romanidze/processing/connector/: PersonModelConnector.java
jvm/flink-processing/src/main/java/com/romanidze/processing/domain/: PersonModel.java
jvm/flink-processing/src/main/java/com/romanidze/processing/operator/: PersonAggregator.java  PersonTimestampAssigner.java
jvm/flink-processing/src/main/java/com/romanidze/processing/schema/: AggregationSerializationSchema.java  PersonModelDeserializationSchema.java
jvm/flink-processing/src/test/java/com/romanidze/processing/: PersonAggregatorTest.java
notebooks/: pyflink-normal-example.ipynb  pyflink-test..ipynb  pyflink-test_2GJWZ524A.zpln  requirements.txt  streaming-flink-python_1.ipynb  streaming-spark-python_1.ipynb
notebooks/table-api-output/: revenue.csv
python/: .gitignore  README.md  commands.txt  pyproject.toml
python/apps/: domain.py  kafka_producer.py
python/docker/: docker-compose.yml
resources/schema/: person_record.avsc
