[tool.poetry]
name = "streaming-python"
version = "0.0.1"
description = "Python examples for working with data streaming"
authors = ["Andrey Romanov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dataclass-csv = "^1.3.0"
dataclasses-avroschema = "^0.25.0"
aiokafka = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
